@@ -3,6 +3,7 @@ Revision history for Perl extension Sys::Info::Driver::Linux.
 {{$NEXT}}
      - Fix for "Can't open /etc/ARRAY(0xdeadbeef): No such file or directory at ..."
      - Update Debian release names.
+     - Fallback to picking the edition from the integer versions list.
 
 0.7905 2018-12-31 BURAK
 
